--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     
     <!-- Table -->
-    <div style="overflow-x:auto; overflow-y: auto;" class="table">
+    <div style="overflow:auto;" class="table">
     <table>
         <tr>
           <th>No</th>
