--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Imsakiyah</title>
 </head>
+
+
+
+
 <body>
 
     <!-- Animasi Bintang -->
@@ -25,7 +29,9 @@
     
     
     <!-- Table -->
-    <div style="overflow:auto;" class="table">
+    <main class="table">
+        <section class="table_header"><h1>Jadwal Imsakiyah Karawang 1444H</h1></section>
+    <section class="table_body">
     <table>
         <tr>
           <th>No</th>
@@ -369,6 +375,6 @@
             <td class="tengah">19:01</td>
         </tr>
 
-      </table> </div>
+      </table> </section> </main>
 </body>
 </html>
