--- a/index.html
+++ b/index.html
@@ -20,17 +20,23 @@
 <body>
 
     <!-- Animasi Bintang -->
+
     <section class="animated-background">
         <div id="stars1"></div>
         <div id="stars2"></div>
         <div id="stars3"></div>
       </section>
-    <!-- Animasi Bintang (end) -->
-    
+
+    <!---------------------->
+
     
     <!-- Table -->
     <main class="table">
-        <section class="table_header"><h1>Jadwal Imsakiyah Karawang 1444H</h1></section>
+        <section class="table_header">
+            <h1>Jadwal Imsakiyah Karawang 1444H</h1>
+            <br>
+            coba coba
+        </section>
     <section class="table_body">
     <table>
         <tr>
