--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             coba coba
         </section>
     <section class="table_body">
-    <table>
+    <table id="jadwal">
         <tr>
           <th>No</th>
           <th>Hari</th>
@@ -382,5 +382,8 @@
         </tr>
 
       </table> </section> </main>
+
+      <script src="scripts.js"></script>
+
 </body>
 </html>
