--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadwal Imsakiyah</title>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 
 
@@ -35,6 +36,7 @@
         <section class="table_header">
             <h1>Jadwal Imsakiyah Karawang 1444H</h1>
             <br>
+            <p id="cpr">Made with ❤ by <a id="link" href="https://instagram.com/rif.drm" target="_blank">Ariiff</a></p>
         </section>
     <section class="table_body">
     <table id="jadwal">
@@ -381,6 +383,11 @@
         </tr>
 
       </table> </section> </main>
+      <br>
+
+      <footer>
+        <p id="sumber">Sumber : <a id="link_sumber" href="https://bimasislam.kemenag.go.id/jadwalimsakiyah" target="_blank">Bimas Islam Kemenag Republik Indonesia</a></p>
+      </footer>
 
       <script src="scripts.js"></script>
 
